rewrote some codes. how fix wrap

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,17 @@
 html, body {
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+.container {
+    margin: 0 auto;
     height: 100%;
     width: 100%;
-
 }
 
-g {
+svg {
     margin: 0 auto;
+    display: block;
 }
+
